--- a/platforms/ios/www/templates/userMatches.html
+++ b/platforms/ios/www/templates/userMatches.html
@@ -1,5 +1,5 @@
 <div id="user-matches">
-    <div class="cf">
+    <div class="cf rel">
         <div id="match-config"></div>
         <% if(matches.length == 0) { %>
             <div id="no-matches">
