--- a/platforms/ios/www/css/main-4.7-inch.css
+++ b/platforms/ios/www/css/main-4.7-inch.css
@@ -176,7 +176,7 @@ div#mask .wheel {
 #profile #top-genres .content .user .avatar { width: 65px; height: 65px; border-radius: 33px; }
 #player,
 #video-src { height: 200px; }
-#fake-lobby-scroller { height: 397px; }
+#fake-lobby-scroller { height: 406px; }
 #fake-lobby-scroller #services,
 #fake-lobby-scroller .list-buttons,
 #seen-data, #movie-info { width: 354px; }
@@ -301,7 +301,7 @@ header nav #chat-menu { top: 5px; }
 #category-container .concierge-poster { height: 185px; width: 123px; }
 .concierge-text { height: 140px; width: 202px; }
 #category-container .concierge-info h1 { margin: 15px 0; }
-#category-container .concierge-info h1 span { margin-top: 15px; }
+#category-container .concierge-info h1 span { margin-top: 15px; line-height: 2px; }
 #synopsis {
 
 }
