menu fix for ipad

--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -950,6 +950,9 @@
     #fabric-menu { 
         top: -974px; 
     }
+    div#fabric-menu.open {
+        height: 974px; 
+    }
 
     /*
     ==============================================================    
