--- a/platforms/ios/www/css/main-4.7-inch.css
+++ b/platforms/ios/www/css/main-4.7-inch.css
@@ -453,7 +453,8 @@ div#search-for-friends { background-size: 24px; }
 }
 .lists-row .profile-picture {
     border-radius: 25px;
-    height: 50px; 
+    height: 50px;
+    width: 50px;
 }
 .friend-list .lists-row,
 #friends .lists-row {
