--- a/platforms/ios/www/templates/coach.html
+++ b/platforms/ios/www/templates/coach.html
@@ -22,7 +22,7 @@
 			arrow : " &#10552;",
 		},
 		finishSwipe : {
-			text : "Let's finish swiping before accessing this movie's details",
+			text : "Let's finish swiping before viewing the details screen",
 			classes : 'finish-swipe',
 			arrow : false,
 		}
