fix to onboard and change to first coach copy

--- a/platforms/ios/www/templates/coach.html
+++ b/platforms/ios/www/templates/coach.html
@@ -2,7 +2,7 @@
  
 	var text = {
 		categorySelect : {
-			text :  "Discover things to do through Fabric's daily packs. Here are some popular ones to get started!",
+			text :  "Build your want-to list by swiping fun movie, music, TV and travel packs!  Here are some popular ones to start with.",
 			classes : 'category-select',
 			arrow : false,
 		}, 
