--- a/platforms/ios/www/templates/coach.html
+++ b/platforms/ios/www/templates/coach.html
@@ -2,7 +2,7 @@
  
 	var text = {
 		categorySelect : {
-			text :  "Build your want-to list by swiping fun movie, music, TV and travel packs!  Here are some popular ones to start with.",
+			text :  "Build your want-to list by swiping fun movie, travel, TV, and music packs!  <br /><br />Here are some popular ones to start with.",
 			classes : 'category-select',
 			arrow : false,
 		}, 
