working on ipad onboard

--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -1106,6 +1106,23 @@
         padding-left: 10px;
         line-height: 26px;
     }
+
+    /*
+    ==============================================================    
+        Weclome
+    ============================================================== 
+    */
+    #welcome-categories {
+        margin: 0 20px;
+        height: 973px; 
+    }
+    #welcome-categories .catItem {
+        margin-top: 20px;
+    }
+    #welcom .catItem {
+        max-height: 218px; 
+        width: 713px;
+    }
 }
 
 
