--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -1119,7 +1119,7 @@
     #welcome-categories .catItem {
         margin-top: 20px;
     }
-    #welcom .catItem {
+    #welcome .catItem {
         max-height: 218px; 
         width: 713px;
     }
