--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -1129,6 +1129,16 @@
         font-size: 20px;
         width: 713px;
     }
+    /*
+    ==============================================================    
+        Coach
+    ============================================================== 
+    */
+    #coach-section.feed div {
+        margin-top: 50px;
+        font-size: 30px;
+    }
+
 }
 
 
