--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -1138,6 +1138,9 @@
         margin-top: 50px;
         font-size: 30px;
     }
+    #coach-section.want-to div {
+        font-size: 23px; 
+    }
 
 }
 
