removing want-to functionality and style from rate.js

--- a/platforms/ios/www/templates/rate.html
+++ b/platforms/ios/www/templates/rate.html
@@ -1,8 +1,6 @@
 <div id="home-slider">
     <div id="home-filters">
-        <div id="category-filter">
-            <span>Explore</span>
-        </div>
+        <div id="category-filter"><span>Explore</span></div>
         <div id="activity-filter">Feed</div>
     </div>
     <div id="category-container">
